Add create & delete GROUP api
